<resources>
    <string name="app_name">Minder - Tasks</string>
    <string name="hint_input_title">Task Name</string>
    <string name="label_input_duration">Duration:</string>
    <string name="label_input_category">Category:</string>
    <string name="none">None</string>
    <string name="label_input_time">Due Time:</string>
    <string name="label_input_date">Due Date:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="newText">New</string>
    <string name="label_input_color">Color:</string>
    <string name="edit_category">Edit Category</string>
    <string name="new_category">New Category</string>
    <string name="label_input_name">Name:</string>
    <string name="title">Title</string>
    <string name="caption">Caption</string>
    <string-array name="array_input_duration">
        <item>&lt;5 mins</item>
        <item>5 mins</item>
        <item>10 mins</item>
        <item>15 mins</item>
        <item>30 mins</item>
        <item>1 hr</item>
        <item>1.5 hrs</item>
        <item>2 hrs</item>
        <item>3 hrs</item>
        <item>4+ hrs</item>
    </string-array>
    <string-array name="array_sort_by">
        <item>Created</item>
        <item>Due Date</item>
        <item>Duration</item>
    </string-array>
    <string-array name="array_input_category_default">
        <item>No category</item>
    </string-array>
</resources>
