<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center"
    android:background="@android:color/transparent"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="0dp"
        android:background="@android:color/white">
        <EditText
            android:id="@+id/input_title"
            android:hint="@string/hint_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences"
            android:selectAllOnFocus="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_input_duration"
                />
            <EditText
                android:id="@+id/input_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/none"
                android:selectAllOnFocus="true"
                />
            <TextView
                android:id="@+id/label_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_input_category"
                />
            <Spinner
                android:id="@+id/input_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_input_time"
                />
            <TextView
                android:id="@+id/input_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_input_date"
                />
            <TextView
                android:id="@+id/input_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>